// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bindings Invalid channel header get filtered 1`] = `
Object {
  "bindings": Array [
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locA",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "2",
      "bindings": Array [
        Object {
          "app_id": "2",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locA",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "icon": "icon",
          "label": "b",
          "location": "/channel_header/locB",
        },
      ],
      "call": Object {},
      "location": "/channel_header",
    },
    Object {
      "app_id": "2",
      "bindings": Array [
        Object {
          "app_id": "2",
          "bindings": undefined,
          "call": Object {},
          "icon": "icon",
          "label": "c",
          "location": "/channel_header/locC",
        },
      ],
      "call": Object {},
      "location": "/channel_header",
    },
    Object {
      "app_id": "3",
      "bindings": Array [],
      "location": "/channel_header",
    },
    Object {
      "app_id": "3",
      "bindings": Array [
        Object {
          "app_id": "3",
          "bindings": undefined,
          "call": Object {},
          "label": "c",
          "location": "/command/locC",
        },
      ],
      "call": Object {},
      "location": "/command",
    },
  ],
}
`;

exports[`bindings Invalid commands get filtered 1`] = `
Object {
  "bindings": Array [
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locA",
        },
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locB",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "icon": "icon",
          "label": "b",
          "location": "/channel_header/locB",
        },
      ],
      "call": Object {},
      "location": "/channel_header",
    },
    Object {
      "app_id": "3",
      "bindings": Array [
        Object {
          "app_id": "3",
          "bindings": Array [
            Object {
              "app_id": "3",
              "bindings": undefined,
              "call": Object {},
              "label": "c2",
              "location": "/command/locC/subC2",
            },
          ],
          "call": Object {},
          "label": "c",
          "location": "/command/locC",
        },
      ],
      "call": Object {},
      "location": "/command",
    },
    Object {
      "app_id": "1",
      "bindings": Array [],
      "location": "/command",
    },
    Object {
      "app_id": "2",
      "bindings": Array [
        Object {
          "app_id": "2",
          "bindings": Array [
            Object {
              "app_id": "2",
              "bindings": undefined,
              "call": Object {},
              "label": "c1",
              "location": "/command/locC/subC1",
            },
            Object {
              "app_id": "2",
              "bindings": undefined,
              "call": Object {},
              "label": "c2",
              "location": "/command/locC/subC2",
            },
          ],
          "call": Object {},
          "label": "c",
          "location": "/command/locC",
        },
      ],
      "call": Object {},
      "location": "/command",
    },
  ],
}
`;

exports[`bindings Invalid post menu get filtered 1`] = `
Object {
  "bindings": Array [
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locB",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "2",
      "bindings": Array [
        Object {
          "app_id": "2",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locA",
        },
        Object {
          "app_id": "2",
          "bindings": undefined,
          "call": Object {},
          "label": "b",
          "location": "/post_menu/locB",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "3",
      "bindings": Array [],
      "location": "/post_menu",
    },
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "icon": "icon",
          "label": "b",
          "location": "/channel_header/locB",
        },
      ],
      "call": Object {},
      "location": "/channel_header",
    },
    Object {
      "app_id": "3",
      "bindings": Array [
        Object {
          "app_id": "3",
          "bindings": undefined,
          "call": Object {},
          "label": "c",
          "location": "/command/locC",
        },
      ],
      "call": Object {},
      "location": "/command",
    },
  ],
}
`;

exports[`bindings No element get filtered 1`] = `
Object {
  "bindings": Array [
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locA",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "2",
      "bindings": Array [
        Object {
          "app_id": "2",
          "bindings": undefined,
          "call": Object {},
          "label": "a",
          "location": "/post_menu/locA",
        },
      ],
      "call": Object {},
      "location": "/post_menu",
    },
    Object {
      "app_id": "1",
      "bindings": Array [
        Object {
          "app_id": "1",
          "bindings": undefined,
          "call": Object {},
          "icon": "icon",
          "label": "b",
          "location": "/channel_header/locB",
        },
      ],
      "call": Object {},
      "location": "/channel_header",
    },
    Object {
      "app_id": "3",
      "bindings": Array [
        Object {
          "app_id": "3",
          "bindings": undefined,
          "call": Object {},
          "label": "c",
          "location": "/command/locC",
        },
      ],
      "call": Object {},
      "location": "/command",
    },
  ],
}
`;
